--- a/app/src/main/res/layout/activity_worker_login.xml
+++ b/app/src/main/res/layout/activity_worker_login.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".worker_login"
-    android:background="@color/darkpurple">
+    android:background="@drawable/prof">
 
 
 
             <EditText
                 android:id="@+id/etnumber"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="40dp"
+                android:paddingLeft="20dp"
                 android:layout_below="@+id/mobile_otp"
+                android:background="@drawable/etm"
                 android:ems="10"
                 android:hint="Enter mobile number"
                 android:inputType="phone"
@@ -24,24 +26,24 @@
         android:id="@+id/mobile_otp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/mobileotp" />
+        android:layout_marginTop="20dp"
+        android:src="@drawable/lg" />
 
             <Button
                 android:id="@+id/btnget_otp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="25dp"
-                android:background="@color/airforceblue"
-                android:textColor="@color/amber"
-                android:textSize="20dp"
-                android:layout_below="@+id/etnumber"
-                android:text="Get otp" />
+                android:background="@drawable/getotp"
+                android:layout_below="@+id/etnumber" />
 
             <EditText
                 android:id="@+id/etotp"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="60dp"
+                android:paddingLeft="20dp"
+                android:background="@drawable/etvm"
                 android:layout_below="@id/btnget_otp"
                 android:ems="10"
                 android:hint="Enter otp received"
@@ -50,13 +52,10 @@
             <Button
                 android:id="@+id/btnverify"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/airforceblue"
-                android:textColor="@color/amber"
-                android:textSize="20dp"
-                android:layout_below="@+id/etotp"
-                android:text="Verify otp" />
+                android:layout_height="60dp"
+                android:layout_marginTop="25dp"
+                android:background="@drawable/verifyotp"
+                android:layout_below="@+id/etotp" />
 
 
 
