--- a/app/src/main/res/layout/activity_salary.xml
+++ b/app/src/main/res/layout/activity_salary.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".salary"
-    android:background="@color/darkpurple">
+    android:background="@drawable/prof">
 
     <ImageView
         android:layout_width="match_parent"
